# Projet-GLCS-2020-2021

./: CMakeCache.txt  Makefile  cmake_install.cmake
baselib/: Makefile
ex1/: CMakeCache.txt  CMakeLists.txt  Makefile
ex1/src/: ex1.cpp
heatlib/: Makefile
simpleui/: CMakeCache.txt  CMakeLists.txt  Makefile
simpleui/ex1/: cmake_install.cmake  ex1.cpp
simpleui/src/: screenprinter.cpp
